--- a/mcp-overview.mdx
+++ b/mcp-overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Overview'
-description: 'Add the Channel3 MCP to your agent'
+title: "Overview"
+description: "Add the Channel3 MCP to your agent"
 ---
 
 ## What is the Channel3 MCP?
@@ -15,15 +15,8 @@ The Channel3 MCP specifically gives your AI agents superpowers for product disco
   <Card title="Personal Shopping Assistant" icon="robot">
     Build an AI that helps users find the perfect product based on their specific needs, budget, and preferences. Great for gift recommendations or comparing products across categories.
   </Card>
-  
-  <Card title="Deal Hunter Bot" icon="tags">
-    Create an agent that monitors product prices and alerts users when items drop below their target price, or finds similar products at better prices.
-  </Card>
-  
-  <Card title="Product Review Analyzer" icon="star">
-    Develop an AI that searches for products, analyzes reviews across platforms, and provides honest recommendations based on real user feedback.
-  </Card>
-  
+
+
   <Card title="Niche Shopping Curator" icon="robot">
     Build specialized shopping assistants for specific niches (tech gear for developers, art supplies for creators, fitness equipment, etc.) with deep domain knowledge.
   </Card>
@@ -39,19 +32,31 @@ Setting up with Channel3 is easy. Get started in just a few steps:
 
 <Steps>
   <Step title="Create Your Free Account">
-    First things first, you'll need a Channel3 account. This is where you'll manage your API keys, track usage, and more.
-    <Card title="Sign Up for Channel3" icon="user-plus" href="https://trychannel3.com/sign-up">
-      Use your Google account, GitHub, or email to sign up. No credit card required - <i>we're paying you, remember?</i>
+    First things first, you'll need a Channel3 account. This is where you'll
+    manage your API keys, track usage, and more.
+    <Card
+      title="Sign Up for Channel3"
+      icon="user-plus"
+      href="https://trychannel3.com/sign-up"
+    >
+      Use your Google account, GitHub, or email to sign up. No credit card
+      required - <i>we're paying you, remember?</i>
     </Card>
   </Step>
   <Step title="Generate Your API Key">
-    Your API key identifies you to Channel3. We use it to track the sales you drive, so you can get paid.
-    <Card title="Go to API Keys in Dashboard" icon="key" href="https://trychannel3.com/dashboard/api">
+    Your API key identifies you to Channel3. We use it to track the sales you
+    drive, so you can get paid.
+    <Card
+      title="Go to API Keys in Dashboard"
+      icon="key"
+      href="https://trychannel3.com/dashboard/api"
+    >
       Generate a new API key, and keep it safe.
     </Card>
   </Step>
   <Step title="Add the Channel3 MCP to your agent.">
-    Our MCP is compatible with all popular MCP clients, such as OpenAI and Claude.
+    Our MCP is compatible with all popular MCP clients, such as OpenAI and
+    Claude.
   </Step>
 </Steps>
 
@@ -125,4 +130,3 @@ asyncio.run(main("I'm looking for a new laptop"))
 </CodeGroup>
 
 That's it! Your agent now has access to Channel3's product search capabilities. Start building and watch your AI come to life with real-world shopping superpowers. 🛍️
-
